# minparse

./: .gitignore  Cargo.toml  README.md
src/: defline.rs  lib.rs  pos.rs  predicates.rs
