[package]
name = "minparser"
version = "0.2.2"
description = "Simple parsing functions"
edition = "2021"
license = "GPL-3.0-or-later"
keywords = ["parser", "scanner"]
categories = ["no-std", "parsing"]
homepage = "https://github.com/Loara-crates/minparser"
repository = "https://github.com/Loara-crates/minparser"
readme = "README.md"

[features]
alloc = []
